set scheme of backend_config to "http"

--- a/Nydus/nydus-fscache/nydusd-config.fscache.json
+++ b/Nydus/nydus-fscache/nydusd-config.fscache.json
@@ -3,7 +3,7 @@
   "config": {
     "backend_type": "registry",
     "backend_config": {
-      "scheme": "https"
+      "scheme": "http"
     },
     "cache_type": "fscache"
   }
