--- a/Nydus/nydus-fusedev/nydusd-config.fusedev.json
+++ b/Nydus/nydus-fusedev/nydusd-config.fusedev.json
@@ -3,7 +3,7 @@
     "backend": {
       "type": "registry",
       "config": {
-        "scheme": "",
+        "scheme": "http",
         "skip_verify": true,
         "timeout": 5,
         "connect_timeout": 5,
