Add mirrorRegistry in ECS of Aliyun

--- a/OverlayBD/config.json
+++ b/OverlayBD/config.json
@@ -17,6 +17,10 @@
         {
             "host": "10.17.16.23:5000",
             "insecure": true
+        },
+        {
+            "host": "47.91.127.212:5000",
+            "insecure": true
         }
     ]
 }
